--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8080
 
-weather.api.key='Enter_your_API_Key_Here'
+weather.api.key=Enter_your_API_Key_Here
 weather.api.url=https://api.openweathermap.org/data/2.5/weather
